@@ -1,4 +1,6 @@
 FHEM:
+- finish updatefhem
+- autoload commands -> rename updatefhem, CULflash, etc
 - FHEM2FHEM reconnect
 - HomeMatic set log 2
 - implement wiki decisions
